--- a/Makefile_ImageMagick
+++ b/Makefile_ImageMagick
@@ -4,7 +4,9 @@ OPENJP2_VERSION ?= 2.3.1
 LIBTIFF_VERSION ?= 4.0.9
 BZIP2_VERSION ?= 1.0.6
 LIBWEBP_VERSION ?= 0.6.1
-IMAGEMAGICK_VERSION ?= 7.0.8-45
+LIBDE265_VERSION ?= 1.0.5
+LIBHEIF_VERSION ?= 1.7.0
+IMAGEMAGICK_VERSION ?= 7.0.10-19
 
 TARGET_DIR ?= /opt/
 PROJECT_ROOT = $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
@@ -113,6 +115,35 @@ $(CACHE_DIR)/lib/libopenjp2.a: $(OPENJP2_SOURCE) $(CACHE_DIR)/lib/libpng.a $(CAC
 	make clean
 	make install
 
+## libde265
+
+LIBDE265_SOURCE=libde265-$(LIBDE265_VERSION).tar.gz
+
+$(LIBDE265_SOURCE):
+	curl -L https://github.com/strukturag/libde265/archive/v$(LIBDE265_VERSION).tar.gz -o $(LIBDE265_SOURCE)
+
+$(CACHE_DIR)/lib/libde265.a: $(LIBDE265_SOURCE)
+	tar xf $<
+	cd libde265-*
+	sh autogen.sh
+	$(CONFIGURE)	 
+	make
+	make install
+
+## libheif
+
+LIBHEIF_SOURCE=libheif-$(LIBHEIF_VERSION).tar.gz
+
+$(LIBHEIF_SOURCE):
+	curl -L https://github.com/strukturag/libheif/archive/v$(LIBHEIF_VERSION).tar.gz -o $(LIBHEIF_SOURCE)
+
+$(CACHE_DIR)/lib/libheif.a: $(LIBHEIF_SOURCE)
+	tar xf $<
+	cd libheif-*
+	sh autogen.sh
+	$(CONFIGURE)	 
+	make
+	make install
 
 ## ImageMagick
 
@@ -127,7 +158,10 @@ LIBS:=$(CACHE_DIR)/lib/libjpeg.a \
 	$(CACHE_DIR)/lib/libopenjp2.a \
 	$(CACHE_DIR)/lib/libtiff.a \
 	$(CACHE_DIR)/lib/libbz2.a \
-	$(CACHE_DIR)/lib/libwebp.a
+	$(CACHE_DIR)/lib/libwebp.a \
+	$(CACHE_DIR)/lib/libde265.a \
+	$(CACHE_DIR)/lib/libheif.a
+
 
 $(TARGET_DIR)/bin/identify: $(IMAGE_MAGICK_SOURCE) $(LIBS)
 	tar xf $<
@@ -136,6 +170,7 @@ $(TARGET_DIR)/bin/identify: $(IMAGE_MAGICK_SOURCE) $(LIBS)
 		./configure \
 		CPPFLAGS=-I$(CACHE_DIR)/include \
 		LDFLAGS=-L$(CACHE_DIR)/lib \
+		LIBS=-lstdc++ \
 		--disable-dependency-tracking \
 		--disable-shared \
 		--enable-static \
